Display all items method in ItemsController

--- a/Views/Items/Index.cshtml
+++ b/Views/Items/Index.cshtml
@@ -4,8 +4,27 @@
 }
 
 
-@foreach(var item in Model){
-    <p>@item.Name</p>
-}
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Description</th>
+      <th scope="col">Category</th>
+      <th scope="col">Price</th>
+
+    </tr>
+  </thead>
+  <tbody>
+    @foreach(var item in Model){
+        <tr>
+            <td>@Html.ActionLink(item.Name, "Details", "Items", new { id = item.Id }, null)</td>
+            <td>@item.Description</td>
+            <td>@item.Category.Name</td>
+            <td>@item.Price</td>
+        </tr>
+    }
+  </tbody>
+</table>
+
 
 
